--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-numpy
-matplotlib
-scikit-learn
-pandas
-opencv-python
-tqdm
-torch
-nibabel
-tensorboard
+numpy==1.21.5
+matplotlib==3.5.2
+scikit-learn==1.0.2
+pandas==1.4.4
+opencv-python==4.9.0.80
+tqdm==4.64.1
+torch==2.1.1
+torchvision==0.16.1
+nibabel==5.1.0
+tensorboard==2.15.2
